# dos14-gramovich-git-flow

./: .gitignore  Dockerfile  Jenkinsfile  README.md  account.yaml  main.py  pyproject.toml
account_clients/: __init__.py
ansible/: inventory.yaml  playbook.yaml  playbook_docker.yaml
ansible/roles/docker/handlers/: main.yaml
ansible/roles/docker/tasks/: main.yaml
config/: __init__.py
k8s/: app.yaml
