[tool.poetry]
name = "dos14-gramovich-git-flow"
version = "0.1.0"
description = ""
authors = ["Gramovich Alexander <gramovich.alex@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
