[tool.poetry]
name = "account"
version = "0.1.0"
description = ""
authors = ["Gramovich Alexander <gramovich.alex@outlook.com>"]
readme = "README.md"
packages = [{include = "account_clients"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
flask  = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
